[tool.poetry]
name = "moneyterm"
version = "0.0.2"
description = "Terminal finance dashboard."
authors = ["Chris <741258+github@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ofxparse = "^0.21"
textual = "^0.44.0"
rich = "^13.7.0"
python-dateutil = "^2.8.2"
textual-plotext = "^0.2.1"

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.2.1"

[tool.poetry.scripts]
moneyterm = "moneyterm.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
